force-app/main/default/objects/PMC_DH_Store_Language__mdt/PMC_DH_Store_Language__mdt.object-meta.xml
<CustomObject>
    <description>Metadata to store the store languages.</description>
    <label>Store Language</label>
    <pluralLabel>Store Languages</pluralLabel>
</CustomObject>