force-app/main/default/objects/PMC_DH_Store_Language__mdt/fields/Language_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Language_Prefix__c</fullName>
    <label>Language Prefix</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>