force-app/main/default/objects/PMC_DH_Store_Language__mdt/fields/PMC_DH_PicklistOrder__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_PicklistOrder__c</fullName>
    <label>Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>