force-app/main/default/objects/PMC_DH_Store_Language__mdt/fields/PMC_DH_UrlPrefix__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_UrlPrefix__c</fullName>
    <label>Url Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>