force-app/main/default/objects/PMC_DH_Store_Language__mdt/fields/User_Locale__c.field-meta.xml
<CustomField>
    <fullName>User_Locale__c</fullName>
    <label>User Locale</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>